--- a/style.css
+++ b/style.css
@@ -1,151 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
-:root{
-    ---box-shadow: 0 1px 3px rgba(0, 0, 0, 0,12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-*{
-    box-sizing: border-box;
-}
-
 body{
-    background-color: #f7f7f7;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
-    font-family: "Alegreya Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    background-color: #95efc5;
+    font-family: 'Roboto',sans-serif;
 }
-
-.container{
-    margin: 30px auto;
-    width: 350px;
+.signup-box{
+    width: 360px;
+    height: 620px;
+    margin: auto;
+    background-color: white;
+    border-radius: 3px;
 }
+.login-box{
+    width: 360px;
+    height: 280px;
+    margin: auto;
+    border-radius: 3px;
+    background-color: white;
 
+}
 h1{
-    letter-spacing: 1px;
-    margin: 0;
-}
-
-h3{
-    border-bottom: 1px solid #bbb;
-    padding-bottom: 10px;
-    margin:40px 0 10px;
-
-}
-
-h4{
-    margin: 0;
-    text-transform: uppercase;
-}
-
-.inc-exp-container{
-    background-color: #fff;
-    box-shadow: var(---box-shadow);
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-}
-
-.inc-exp-container>div{
-    flex: 1;
     text-align: center;
-}
+    padding-top: 15px;
 
-.inc-exp-container>div:first-of-type{
-    border-right: 1px solid #dedede;
 }
+h4{
+    text-align: center;
 
-.money{
-    font-size: 2;
-    letter-spacing: 1px;
-    margin: 5px 0;
 }
+form{
+    width: 300px;
+    margin-left: 20px;
 
-.money-plus{
-    color: #2ecc71;
 }
-
-.money-minus{
-    color: #c0392b;
-}
-
-label{
-    display: inline-block;
-    margin: 10px 0;
-}
-
-input[type="text"],input[type="number"]{
-    border: 1px solid #dedede;
-    border-radius: 2px;
-    display: block;
-    font-size: 16px;
-    padding: 10px;
-    width: 100%;
-}
-
-.btn{
-    cursor: pointer;
-    background-color: #9c88ff;
-    box-shadow: var(---box-shadow);
-    color: #fff;
-    border: 0;
-    display: block;
-    font-size: 16px;
-    margin: 10px 0 30px;
-    padding: 10px;
-    width: 100%;
-}
-
-.btn:focus,.delete-btn:focus{
-    outline: 0;
-}
-
-.list{
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 40px;
-}
-
-.list li{
-    background-color: #fff;
-    box-shadow: var(---box-shadow);
-    color: #333;
+form label{
     display: flex;
-    justify-content: space-between;
-    position: relative;
-    padding: 10px;
-    margin: 10px 0;
+    margin-top: 20px;
+    font-size: 18px;
+
+}
+form input{
+    width: 100%;
+    padding: 7px;
+    border: none;
+    border: 1px solid gray;
+    border-radius: 6px;
+    outline: none;
+
 }
 
-.list li.plus{
-    border-right: 5px solid #2ecc71;
+input[type="button"]{
+    width: 320px;
+    height: 35px;
+    margin-top: 20px;
+    border: none;
+    background-color: rgb(4, 102, 81);
+    color: white;
+    font-size: 18px;
 }
-
-.list li.minus{
-    border-right: 5px solid #c0392b;
+p{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 15px;
 }
+.para-2{
+    text-align: center;
+    color: white;
+    font-size: 15px;
+    margin-top: -10px;
 
-.delete-btn{
-    cursor: pointer;
-    background-color: #e74c3c;
-    border: 0;
-    color: #fff;
-    font-size: 20px;
-    line-height: 20px;
-    padding: 2px 5px;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(-100%,-50%);
-    opacity: 0;
-    transition: opacity 0.3s ease;
 }
-
-.list li:hover .delete-btn{
-    opacity: 1;
+.para-2 a{
+    color: rgb(4, 102, 81);
 }
